<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Everyday Fitness</string>
    <string name="title_activity_workouts">Workouts</string>
    <string name="title_activity_timer">Timer</string>
    <string name="title_activity_calorie">Calorie Counter</string>
    <string name="title_activity_feedback">Feedback</string>
    <string name="title_activity_steps">Step Counter</string>
    <string name="title_activity_settings">Settings</string>
    <string name="app_icon">App Icon</string>
    <string name="welcome">Welcome to Everyday Fitness</string>
    <string name="started_sub_title_login"><b>Login</b> if you already have an account.</string>
    <string name="started_sub_title_register"><b>Register</b> to get started with the workouts. </string>
    <string name="btn_register">Register</string>
    <string name="btn_login">Login</string>
    <string name="login_title">Login to app</string>
    <string name="login_sub_title">
        <font color="000000"><b>Login Here</b></font>
        <br>if you already have an account.</br>
    </string>
    <string name="login_email"> Your email or username</string>
    <string name="login_password"> Your Password </string>
    <string name="forgot_pw">Forgot Password?</string>
    <string name="No_account">I do not have an account<font color="#000000"><b>\nRegister</b></font>
    </string>
    <string name="fullname">Your full name</string>
    <string name="youremail">Your email address</string>
    <string name="username">Your username</string>
    <string name="yourpassword">Your password</string>
    <string name="confirm_pw">Confirm password</string>
    <string name="register_have_account">I already have an account<font color="000000">\n<b>Login</b></font>
    </string>
    <string name="register_title">Create an account</string>
    <string name="register_sub_title">
        <b>Register</b> to get started
    </string>
    <string name="workouts_arms">Arms</string>
    <string name="workouts_legs">Legs</string>
    <string name="workouts_back">Back</string>
    <string name="workouts_abs">Abs</string>
    <string name="workouts_shoulder">Shoulder</string>
    <string name="workouts_body">Full Body</string>
    <string name="action_settings">Settings</string>
    <string name="feedback_text">Your feedback is important to us!</string>
    <string name="feedback_submit">Submit</string>
    <string name="place_holder_time">00:00:00</string>
    <string name="reset">Reset</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="terms">Terms Of Use</string>
    <string name="terms1">PLEASE READ THESE TERMS OF USE CAREFULLY BEFORE USING THIS APPLICATION. By using this application on any computer, mobile phone, tablet, console or other device (collectively, “Device”),you signify that you have read, understand and agree to be bound by these Terms of Use and any other applicable law. Everyday Fitness Application, LLC (“Everyday Fitness”) may change these Terms of Use at any time without notice, effective upon its posting to the App. Your continued use of the Application shall be considered your acceptance to the revised Terms of Use. If you do not agree to these Terms of Use, please do not use this Application.</string>
    <string name="notice">Physical Activity Notice</string>
    <string name="terms2">The Application may include features that promote physical activity. Consider the risks involved and consult with your medical professional before engaging in any physical activity. EverydayFitness is not responsible or liable for any injuries or damages you may sustain that result from your use of, or inability to use, the features of the App.</string>
    <string name="IP">Intellectual Property</string>
    <string name="terms3">All intellectual property on the App is owned by EverydayFitness or its licensors, which includes materials protected by copyright, trademark, or patent laws. All trademarks, service marks and trade names are owned, registered and/or licensed by DAILY WORKOUT. All content on the App (except for Personal Information), including but not limited to text, software, scripts, code, designs, graphics, photos, sounds, music, videos, applications, interactive features and all other content (“Content”) is a collective work under the Singapore and other copyright laws and is the proprietary property of EverydayFitness; All rights reserved.</string>
    <string name="restrictions">Application Use Restrictions</string>
    <string name="terms4">You may use the Content only for your own non-commercial use to use the App. You agree not to change or delete any ownership notices from materials downloaded or printed from the App. You agree not to modify, copy, translate, broadcast, perform, display, distribute, frame, reproduce, republish, download, display, post, transmit or sell any Intellectual Property or Content appearing on the App, including Personal Information (defined below), without EverydayFitness’s prior written consent, unless it is your own Personal Information that you legally post on the App. You agree not to use any data mining, robots, scraping or similar data gathering methods. Nothing in these Terms of Use shall be interpreted as granting any license of intellectual property rights to you.</string>
    <string name="personalInfo">Personal Information</string>
    <string name="terms5">To use the Application, you may be asked to provide certain personal information (the “Personal Information”), including information about your weight, age and gender, to optimize your use of the App. If you choose to provide such Personal Information, you agree to provide accurate and current information about yourself, and EverydayFitness will not be responsible for any injury related to any Personal Information you submit to the App or omit. The use or disclosure of any Personal Information you supply will be governed by our Privacy Policy.</string>
    <string name="links">Links</string>
    <string name="terms6">The Application may contain links to websites, applications or other products or services operated by other companies (“Third Party Platforms”). EverydayFitness does not endorse, monitor or have any control over these Third Party Platforms, which have separate terms of use and privacy policies. EverydayFitness is not responsible for the content or policies of Third Party Platforms and you access such Third Party Platforms at your own risk.</string>
    <string name="services">Mobile Services</string>
    <string name="terms7">The App contains services and features that are available to certain mobile Devices. Your carrier’s normal rates and fees apply. Not all mobile services will work with all carriers or Devices. By using EverydayFitness’s mobile services, you agree that we may communicate with you by electronic means to your mobile Device and that certain information about your use of these services may be shared with us. If you change or deactivate your mobile phone number, you must promptly update your account information to ensure that we don’t send your messages to a different person.</string>
    <string name="indemnification">Indemnification</string>
    <string name="terms8">You agree to indemnify, defend, and hold harmless EverydayFitness APPS, LLC, its affiliates, officers, directors, employees, agents, licensors and suppliers from and against all claims, losses, liabilities, expenses, damages and costs, including, without limitation, attorneys’ fees, arising from or relating in any way to your Personal Information, your use of the App, your conduct in connection with the App or with other App users, or any violation of these Terms of Use, any law or the rights of any third party.</string>
    <string name="privacy">Privacy</string>
    <string name="terms9">Our Privacy Policy, which is incorporated into these Terms of Use by this reference, further describes the collection and use of information on this Application.</string>
    <string name="disclaimer">User Interaction Disclaimer</string>
    <string name="terms10">"You are solely responsible for your interactions with other people, whether online or in person. EverydayFitness is not responsible or liable for any loss or damage resulting from any interaction with other App users, persons you meet through the App, or persons who find you because of information posted on, by or through the App. You agree to take reasonable precautions in all interactions with other users on the App, and conduct any necessary investigation before meeting another person. EverydayFitness is under no obligation to become involved with any user dispute, but may do so at its own discretion.</string>
    <string name="misc">Miscellaneous</string>
    <string name="terms11">You agree that this App shall be deemed a passive website solely based in Singapore, which does not give rise to personal jurisdiction over EverydayFitness in jurisdictions other than Minnesota. You agree that this App, Terms of Use, Privacy Policy and any dispute between you and EverydayFitness shall be governed in all respects by Singapore law, without regard to choice of law provisions. Except where prohibited, you agree that all disputes, claims and legal proceedings directly or indirectly arising out of or relating to this App (including but not limited to the purchase of EverydayFitness products) shall be resolved individually, without resort to any form of class action. Any cause of action or claim you may have with respect to the App (including but not limited to the purchase of EverydayFitness products) must be commenced within one (1) year after the claim or cause of action arises. By using the App, you agree to receive certain electronic communications from EverydayFitness. You agree that any notice, agreement, disclosure or other communication that EverydayFitness sends you electronically will satisfy any legal communication requirements, including that such communications be in writing. EverydayFitness’s failure to insist upon or enforce strict performance of any of these Terms of Use shall not be considered a waiver of any provision or right. Neither the course of conduct between the parties nor trade practice shall modify any of these Terms of Use. EverydayFitness may assign its rights and duties under these Terms of Use to any party at any time without notice to you.</string>
    <string name="termination">Termination</string>
    <string name="terms12">EverydayFitness reserves the right in its sole discretion to terminate your account, delete your profile and any of your Personal Information, and restrict your use of all or any part of the App for any or no reason, without notice, and without liability to you or anyone else. EverydayFitness also reserves the right to block users from certain IP addresses or Device numbers and prevent access to the App. These Terms of Use remain in effect even after your account is terminated. The Terms of Use relating to Intellectual Property, Indemnification, User Interaction Disclaimer, Warranty Disclaimer, Limitation of Liability, Miscellaneous, Severability and terms that by their nature may survive termination shall survive any termination.</string>
    <string name="change_email">Change Email</string>
    <string name="current_email">Current Email</string>
    <string name="new_email">New Email</string>
    <string name="password">Password</string>
    <string name="save">Save</string>
    <string name="reset_password">Reset Password</string>
    <string name="email">Email</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="feedback_typeFeedback">Type your feedback here</string>
    <string name="feedback">Feedback</string>
    <string name="workouts_rest" tools:ignore="TypographyDashes">*Rest between each set for 2-3 minutes</string>
</resources>